gcc/testsuite/rust/rustc/ui/parser/issue-24197.rs
fn main() {
    let buf[0] = 0; // { dg-error "" "" { target *-*-* } }
}

